--- a/assets/scss/pages/_document-list.scss
+++ b/assets/scss/pages/_document-list.scss
@@ -60,6 +60,7 @@
 
 .document-type {
   display: inline-block;
+  vertical-align: top;
   text-align: center;
   width: 130px;
   padding: 15px 10px;
